@@ -7,6 +7,8 @@ set (LUA_INCLUDES
 )
 
 add_library( managers
+    action_manager.h
+    action_manager.cc
     data_manager.h
     data_manager.cc
     event_manager.cc
