@@ -9,6 +9,7 @@ snort_config.lua \
 snort_plugin.lua
 
 libmanagers_a_SOURCES = \
+action_manager.cc action_manager.h \
 data_manager.cc data_manager.h \
 event_manager.cc event_manager.h \
 inspector_manager.cc inspector_manager.h \
